<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout android:layout_height="match_parent"
    android:layout_width="match_parent"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:background="@color/conversionColor">
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/tvWeight"
        android:text="@string/weight_conversion"
        android:textAllCaps="true"
        android:textStyle="bold"
        android:textAlignment="center"
        android:textSize="25sp"
        android:textColor="@color/black"
        android:layout_marginTop="20dp"/>
    <Spinner
        android:id="@+id/spWeightFrom"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/tvWeight"
        android:layout_marginTop="15dp"
        android:layout_marginBottom="15dp">
    </Spinner>
    <EditText
        android:id="@+id/etWeight"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textAlignment="center"
        android:textColor="@color/black"
        android:layout_below="@id/spWeightFrom"
        android:inputType="numberDecimal"
        android:hint="@string/default_value"/>
    <Spinner
        android:id="@+id/spWeightTo"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/etWeight"
        android:layout_marginTop="15dp"
        android:layout_marginBottom="15dp">
    </Spinner>
    <Button
        android:id="@+id/bConvert"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/convert"
        android:layout_below="@id/spWeightTo"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="30dp"
        android:textStyle="bold"
        android:background="@color/convertColor"
        android:textColor="@color/convertTextColor"
        />
</RelativeLayout>