<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout android:layout_height="match_parent"
    android:layout_width="match_parent"
    xmlns:android="http://schemas.android.com/apk/res/android">
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/tvVolume"
        android:text="@string/volume_conversion"
        android:textAllCaps="true"
        android:textStyle="bold"
        android:textAlignment="center"
        android:textSize="25sp"
        android:textColor="@color/black"
        android:layout_marginTop="20dp"/>
    <Spinner
        android:id="@+id/spVolumeFrom"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/tvVolume"
        android:layout_marginTop="15dp"
        android:layout_marginBottom="15dp"
        android:layout_centerHorizontal="true"
        android:entries="@array/volume">
    </Spinner>
    <EditText
        android:id="@+id/etVolume"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textAlignment="center"
        android:textColor="@color/black"
        android:layout_below="@id/spVolumeFrom"
        android:inputType="numberDecimal"
        android:hint="@string/default_value"/>
    <Spinner
        android:id="@+id/spVolumeTo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/etVolume"
        android:layout_marginTop="15dp"
        android:layout_centerHorizontal="true"
        android:entries="@array/volume"
        android:layout_marginBottom="15dp">
    </Spinner>
    <Button
        android:id="@+id/bConvertVolume"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/convert"
        android:layout_below="@id/spVolumeTo"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="30dp"
        android:textStyle="bold"
        android:background="@color/convertColor"
        android:textColor="@color/convertTextColor"
        />
</RelativeLayout>